--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(te_tetris)
 # Forza uso di librerie statiche
 set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 set(BUILD_SHARED_LIBS OFF)
-set(CMAKE_EXE_LINKER_FLAGS "-static")
+
+# Flags per static linking completo (MinGW)
+set(CMAKE_EXE_LINKER_FLAGS "-static -static-libgcc -static-libstdc++")
 
 # Cartelle
 set(SRC_DIR "versions/current/src")
@@ -25,5 +27,5 @@ set_target_properties(te_tetris PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
 )
 
-# Se devi linkare librerie statiche specifiche, aggiungile qui:
+# Se serve linkare librerie statiche aggiuntive:
 # target_link_libraries(te_tetris PRIVATE m pthread)
