--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,112 +1,73 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.20)
 project(te_tetris LANGUAGES CXX)
 
+# ============================================================
+# STANDARD C++
+# ============================================================
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(BUILD_SHARED_LIBS OFF)
-
 include(FetchContent)
 
-# ================== JSON ==================
+# ============================================================
+# ZLIB (FetchContent, target moderno)
+# ============================================================
+FetchContent_Declare(
+    zlib
+    GIT_REPOSITORY https://github.com/madler/zlib.git
+    GIT_TAG v1.3.1
+)
+
+set(ZLIB_BUILD_SHARED OFF CACHE BOOL "" FORCE)
+set(ZLIB_BUILD_STATIC ON  CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(zlib)
+
+# Espone ZLIB::ZLIB come si aspetta FindZLIB / IXWebSocket
+if(NOT TARGET ZLIB::ZLIB)
+    add_library(ZLIB::ZLIB ALIAS zlibstatic)
+endif()
+
+# ============================================================
+# nlohmann/json (header-only)
+# ============================================================
 FetchContent_Declare(
     nlohmann_json
     GIT_REPOSITORY https://github.com/nlohmann/json.git
     GIT_TAG v3.11.3
-    GIT_SHALLOW TRUE
 )
 FetchContent_MakeAvailable(nlohmann_json)
 
-# ================== HTTPLIB (SENZA SSL - APPROCCIO SICURO) ==================
-# Prima scarichiamo
+# ============================================================
+# cpp-httplib (header-only)
+# ============================================================
 FetchContent_Declare(
-    cpp-httplib
+    cpp_httplib
     GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
     GIT_TAG v0.15.3
-    GIT_SHALLOW TRUE
 )
+FetchContent_MakeAvailable(cpp_httplib)
 
-FetchContent_GetProperties(cpp-httplib)
-if(NOT cpp-httplib_POPULATED)
-    FetchContent_Populate(cpp-httplib)
-    
-    # 🔥 PATCH MANUALE SEMPLICE
-    message(STATUS "🔧 Rimozione SSL da httplib.h...")
-    
-    # Leggi il file
-    file(READ "${cpp-httplib_SOURCE_DIR}/httplib.h" HTTPLIB_CONTENT)
-    
-    # Sostituzioni SEMPLICI (una per una)
-    string(REPLACE "#include <openssl/ssl.h>"
-           "// #include <openssl/ssl.h> // REMOVED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-           
-    string(REPLACE "#include <openssl/err.h>"
-           "// #include <openssl/err.h> // REMOVED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-           
-    string(REPLACE "#include <openssl/x509.h>"
-           "// #include <openssl/x509.h> // REMOVED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-           
-    string(REPLACE "#include <openssl/crypto.h>"
-           "// #include <openssl/crypto.h> // REMOVED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-           
-    string(REPLACE "#include <openssl/bio.h>"
-           "// #include <openssl/bio.h> // REMOVED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-    
-    # Disabilita le sezioni SSL
-    string(REPLACE "#ifdef CPPHTTPLIB_OPENSSL_SUPPORT"
-           "#if 0 // CPPHTTPLIB_OPENSSL_SUPPORT DISABLED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-           
-    string(REPLACE "#if defined(CPPHTTPLIB_OPENSSL_SUPPORT)"
-           "#if 0 // CPPHTTPLIB_OPENSSL_SUPPORT DISABLED" 
-           HTTPLIB_CONTENT "${HTTPLIB_CONTENT}")
-    
-    # Scrivi il file patchato
-    file(WRITE "${cpp-httplib_SOURCE_DIR}/httplib.h" "${HTTPLIB_CONTENT}")
-    
-    message(STATUS "✅ httplib.h patchato - SSL rimosso")
-endif()
-
-# ================== IXWEBSOCKET ==================
-set(USE_ZLIB OFF CACHE BOOL "" FORCE)
-set(USE_TLS OFF CACHE BOOL "" FORCE)
+# ============================================================
+# IXWebSocket (subproject, NO install, NO TLS)
+# ============================================================
+set(IXWEBSOCKET_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(IXWEBSOCKET_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(IXWEBSOCKET_BUILD_WITH_TLS OFF CACHE BOOL "" FORCE)
+set(IXWEBSOCKET_INSTALL OFF CACHE BOOL "" FORCE)
 
 FetchContent_Declare(
     ixwebsocket
     GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git
     GIT_TAG v11.4.5
-    GIT_SHALLOW TRUE
 )
 FetchContent_MakeAvailable(ixwebsocket)
 
-add_library(ixwebsocket_internal STATIC
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXWebSocket.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXWebSocketTransport.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXSocket.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXNetSystem.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXDNSLookup.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXHttp.cpp
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket/IXWebSocketServer.cpp
-)
-
-target_include_directories(ixwebsocket_internal PUBLIC
-    ${ixwebsocket_SOURCE_DIR}
-    ${ixwebsocket_SOURCE_DIR}/ixwebsocket
-)
-
-target_compile_definitions(ixwebsocket_internal PUBLIC
-    IXWEBSOCKET_USE_ZLIB=0
-    IXWEBSOCKET_USE_TLS=0
-)
-
-# ================== EXECUTABLE ==================
-file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
+# ============================================================
+# FILES DEL PROGETTO
+# ============================================================
+file(GLOB_RECURSE SRC_FILES
     versions/current/src/*.cpp
 )
 
@@ -115,39 +76,54 @@ add_executable(te_tetris
     ${SRC_FILES}
 )
 
-# Definisci macro per disabilitare SSL
-target_compile_definitions(te_tetris PRIVATE
-    CPPHTTPLIB_OPENSSL_SUPPORT=0
-    CPPHTTPLIB_ZLIB_SUPPORT=0
-    CPPHTTPLIB_BROTLI_SUPPORT=0
-)
-
+# ============================================================
+# INCLUDE (solo quelli del progetto)
+# ============================================================
 target_include_directories(te_tetris PRIVATE
     versions/current/include
-    ${cpp-httplib_SOURCE_DIR}
+    ${cpp_httplib_SOURCE_DIR}
 )
 
+# ============================================================
+# LINK LIBRARIES (modo moderno)
+# ============================================================
 target_link_libraries(te_tetris PRIVATE
+    ixwebsocket
     nlohmann_json::nlohmann_json
-    ixwebsocket_internal
+    ZLIB::ZLIB
 )
 
-# 🔥 STATICO COMPLETO
-if (MINGW)
+# ============================================================
+# STATIC LINKING SOLO SU MinGW
+# ============================================================
+if(MINGW)
     target_link_options(te_tetris PRIVATE
         -static
         -static-libgcc
         -static-libstdc++
-        -Wl,--whole-archive
-        -lwinpthread
-        -Wl,--no-whole-archive
     )
-    
-    target_link_libraries(te_tetris PRIVATE ws2_32)
+
+    target_link_libraries(te_tetris PRIVATE
+        ws2_32
+        winmm
+        pthread
+    )
 endif()
 
+# ============================================================
+# OUTPUT
+# ============================================================
 set_target_properties(te_tetris PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin
 )
 
-message(STATUS "✅ Build SENZA SSL - httplib patchato")
+# ============================================================
+# MESSAGGI FINALI
+# ============================================================
+message(STATUS "===================================")
+message(STATUS "✔ te_tetris configurato correttamente")
+message(STATUS "✔ ZLIB via FetchContent (ZLIB::ZLIB)")
+message(STATUS "✔ IXWebSocket (no TLS, no install)")
+message(STATUS "✔ nlohmann/json")
+message(STATUS "✔ cpp-httplib")
+message(STATUS "===================================")
