aggiunta suoni -- softdrop, harddrop, rotazion, movimento, hold, lina_singola, linee_multiple, 4_linee

--- a/bin/config.json
+++ b/bin/config.json
@@ -32,10 +32,10 @@
         "C",
         "c"
     ],
-    "blocco_sinistra": "█",
-    "blocco_destra": "█",
-    "ghost_block_sinistra": "█",
-    "ghost_block_destra": "█",
-    "musica": 10.0,
-    "suoni": 20.0
+    "blocco_sinistra": "[",
+    "blocco_destra": "]",
+    "ghost_block_sinistra": "{",
+    "ghost_block_destra": "]",
+    "musica": 0.0,
+    "suoni": 70.0
 }
